--- a/login.html
+++ b/login.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="login.css">
+    <script src="sistema.js"></script>
 </head>
 <body>
     <div class="login-container">
         <div class="login-card">
             <h1>Bem-vindo!</h1>
             <p>Faça login para continuar</p>
+            <div class="g-recaptcha" data-sitekey="sua-chave-publica"></div>
             <form action="#" method="POST">
                 <div class="input-group">
                     <label for="email">E-mail</label>
@@ -23,10 +25,46 @@
                 <button type="submit" class="btn">Entrar</button>
                 <div class="links">
                     <a href="#">Esqueceu sua senha?</a>
-                    <a href="#">Criar conta</a>
+                    <a href="cadastro.html">Criar conta</a>
                 </div>
             </form>
         </div>
     </div>
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login</title>
+    <link rel="stylesheet" href="login.css">
+    <script src="sistema.js"></script>
+</head>
+<body>
+    <div class="login-container">
+        <div class="login-card">
+            <h1>Bem-vindo!</h1>
+            <p>Faça login para continuar</p>
+            <div class="g-recaptcha" data-sitekey="sua-chave-publica"></div>
+            <form action="#" method="POST">
+                <div class="input-group">
+                    <label for="email">E-mail</label>
+                    <input type="email" id="email" name="email" placeholder="Digite seu e-mail" required>
+                </div>
+                <div class="input-group">
+                    <label for="password">Senha</label>
+                    <input type="password" id="password" name="password" placeholder="Digite sua senha" required>
+                </div>
+                <button type="submit" class="btn">Entrar</button>
+                <div class="links">
+                    <a href="#">Esqueceu sua senha?</a>
+                    <a href="cadastro.html">Criar conta</a>
+                </div>
+            </form>
+        </div>
+    </div>
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </body>
 </html>
